compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> if
Rule 4     statement -> vardecl
Rule 5     statement -> funcdecl
Rule 6     statement -> whileloop
Rule 7     statement -> forloop
Rule 8     gt -> GT
Rule 9     ge -> GE
Rule 10    lt -> LT
Rule 11    le -> LE
Rule 12    ne -> NE
Rule 13    eq -> EQ
Rule 14    comparator -> gt
Rule 15    comparator -> ge
Rule 16    comparator -> lt
Rule 17    comparator -> le
Rule 18    comparator -> ne
Rule 19    comparator -> eq
Rule 20    condition -> condition comparator expression
Rule 21    condition -> LPAREN condition RPAREN
Rule 22    condition -> expression
Rule 23    condition -> condition AND condition
Rule 24    condition -> condition OR condition
Rule 25    condition -> condition XOR condition
Rule 26    condition -> NOT condition
Rule 27    if -> IF condition LBRACE program RBRACE
Rule 28    if -> IF condition LIKELY BOOL LBRACE program RBRACE
Rule 29    if -> if ELIF condition LBRACE program RBRACE
Rule 30    if -> if ELIF condition LIKELY BOOL LBRACE program RBRACE
Rule 31    if -> if ELSE LBRACE program RBRACE
Rule 32    item -> object COLON object
Rule 33    items -> items SEPARATOR item
Rule 34    items -> item
Rule 35    elements -> elements SEPARATOR object
Rule 36    elements -> object
Rule 37    dict -> LBRACE items RBRACE
Rule 38    list -> LBRACKET elements RBRACKET
Rule 39    tuple -> LPAREN elements RPAREN
Rule 40    object -> dict
Rule 41    object -> list
Rule 42    object -> tuple
Rule 43    object -> int
Rule 44    object -> float
Rule 45    object -> double
Rule 46    object -> string
Rule 47    object -> char
Rule 48    object -> bool
Rule 49    object -> null
Rule 50    object -> namespace
Rule 51    object -> funccall
Rule 52    namespace -> NAMESPACE
Rule 53    int -> INT
Rule 54    float -> FLOAT
Rule 55    double -> DOUBLE
Rule 56    string -> STRING
Rule 57    char -> CHAR
Rule 58    bool -> BOOL
Rule 59    null -> NULL
Rule 60    type -> TYPE
Rule 61    structure -> structure SEPARATOR type
Rule 62    structure -> type
Rule 63    type -> TYPE LBRACKET structure RBRACKET
Rule 64    vardecl -> namespace type EQUALS object
Rule 65    argtypes -> argtypes SEPARATOR object type
Rule 66    argtypes -> NAMESPACE type
Rule 67    funcdecl -> DEFINE namespace LPAREN argtypes RPAREN type LBRACE program RBRACE
Rule 68    whileloop -> WHILE condition LBRACE program RBRACE
Rule 69    forloop -> FOR namespace IN object LBRACE program RBRACE
Rule 70    funccall -> object LPAREN elements RPAREN
Rule 71    times -> TIMES
Rule 72    divide -> DIVIDE
Rule 73    plus -> PLUS
Rule 74    minus -> MINUS
Rule 75    mod -> MOD
Rule 76    power -> POWER
Rule 77    op -> times
Rule 78    op -> divide
Rule 79    op -> plus
Rule 80    op -> minus
Rule 81    op -> mod
Rule 82    op -> power
Rule 83    expression -> expression op expression
Rule 84    expression -> expression op object
Rule 85    expression -> object op object
Rule 86    expression -> MINUS expression

Terminals, with rules where they appear

AND                  : 23
BOOL                 : 28 30 58
CHAR                 : 57
COLON                : 32
DEFINE               : 67
DIVIDE               : 72
DOUBLE               : 55
ELIF                 : 29 30
ELSE                 : 31
EQ                   : 13
EQUALS               : 64
FLOAT                : 54
FOR                  : 69
GE                   : 9
GT                   : 8
IF                   : 27 28
IN                   : 69
INT                  : 53
LBRACE               : 27 28 29 30 31 37 67 68 69
LBRACKET             : 38 63
LE                   : 11
LIKELY               : 28 30
LPAREN               : 21 39 67 70
LT                   : 10
MINUS                : 74 86
MOD                  : 75
NAMESPACE            : 52 66
NE                   : 12
NOT                  : 26
NULL                 : 59
OR                   : 24
PLUS                 : 73
POWER                : 76
RBRACE               : 27 28 29 30 31 37 67 68 69
RBRACKET             : 38 63
RPAREN               : 21 39 67 70
SEPARATOR            : 33 35 61 65
STRING               : 56
TIMES                : 71
TYPE                 : 60 63
WHILE                : 68
XOR                  : 25
error                : 

Nonterminals, with rules where they appear

argtypes             : 65 67
bool                 : 48
char                 : 47
comparator           : 20
condition            : 20 21 23 23 24 24 25 25 26 27 28 29 30 68
dict                 : 40
divide               : 78
double               : 45
elements             : 35 38 39 70
eq                   : 19
expression           : 20 22 83 83 84 86
float                : 44
forloop              : 7
funccall             : 51
funcdecl             : 5
ge                   : 15
gt                   : 14
if                   : 3 29 30 31
int                  : 43
item                 : 33 34
items                : 33 37
le                   : 17
list                 : 41
lt                   : 16
minus                : 80
mod                  : 81
namespace            : 50 64 67 69
ne                   : 18
null                 : 49
object               : 32 32 35 36 64 65 69 70 84 85 85
op                   : 83 84 85
plus                 : 79
power                : 82
program              : 1 27 28 29 30 31 67 68 69 0
statement            : 1 2
string               : 46
structure            : 61 63
times                : 77
tuple                : 42
type                 : 61 62 64 65 66 67
vardecl              : 4
whileloop            : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . if
    (4) statement -> . vardecl
    (5) statement -> . funcdecl
    (6) statement -> . whileloop
    (7) statement -> . forloop
    (27) if -> . IF condition LBRACE program RBRACE
    (28) if -> . IF condition LIKELY BOOL LBRACE program RBRACE
    (29) if -> . if ELIF condition LBRACE program RBRACE
    (30) if -> . if ELIF condition LIKELY BOOL LBRACE program RBRACE
    (31) if -> . if ELSE LBRACE program RBRACE
    (64) vardecl -> . namespace type EQUALS object
    (67) funcdecl -> . DEFINE namespace LPAREN argtypes RPAREN type LBRACE program RBRACE
    (68) whileloop -> . WHILE condition LBRACE program RBRACE
    (69) forloop -> . FOR namespace IN object LBRACE program RBRACE
    (52) namespace -> . NAMESPACE

    IF              shift and go to state 8
    DEFINE          shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    NAMESPACE       shift and go to state 13

    program                        shift and go to state 1
    statement                      shift and go to state 2
    if                             shift and go to state 3
    vardecl                        shift and go to state 4
    funcdecl                       shift and go to state 5
    whileloop                      shift and go to state 6
    forloop                        shift and go to state 7
    namespace                      shift and go to state 9

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . if
    (4) statement -> . vardecl
    (5) statement -> . funcdecl
    (6) statement -> . whileloop
    (7) statement -> . forloop
    (27) if -> . IF condition LBRACE program RBRACE
    (28) if -> . IF condition LIKELY BOOL LBRACE program RBRACE
    (29) if -> . if ELIF condition LBRACE program RBRACE
    (30) if -> . if ELIF condition LIKELY BOOL LBRACE program RBRACE
    (31) if -> . if ELSE LBRACE program RBRACE
    (64) vardecl -> . namespace type EQUALS object
    (67) funcdecl -> . DEFINE namespace LPAREN argtypes RPAREN type LBRACE program RBRACE
    (68) whileloop -> . WHILE condition LBRACE program RBRACE
    (69) forloop -> . FOR namespace IN object LBRACE program RBRACE
    (52) namespace -> . NAMESPACE

    IF              shift and go to state 8
    DEFINE          shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    NAMESPACE       shift and go to state 13

    statement                      shift and go to state 14
    if                             shift and go to state 3
    vardecl                        shift and go to state 4
    funcdecl                       shift and go to state 5
    whileloop                      shift and go to state 6
    forloop                        shift and go to state 7
    namespace                      shift and go to state 9

state 2

    (2) program -> statement .

    IF              reduce using rule 2 (program -> statement .)
    DEFINE          reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    NAMESPACE       reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    RBRACE          reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> if .
    (29) if -> if . ELIF condition LBRACE program RBRACE
    (30) if -> if . ELIF condition LIKELY BOOL LBRACE program RBRACE
    (31) if -> if . ELSE LBRACE program RBRACE

    IF              reduce using rule 3 (statement -> if .)
    DEFINE          reduce using rule 3 (statement -> if .)
    WHILE           reduce using rule 3 (statement -> if .)
    FOR             reduce using rule 3 (statement -> if .)
    NAMESPACE       reduce using rule 3 (statement -> if .)
    $end            reduce using rule 3 (statement -> if .)
    RBRACE          reduce using rule 3 (statement -> if .)
    ELIF            shift and go to state 15
    ELSE            shift and go to state 16


state 4

    (4) statement -> vardecl .

    IF              reduce using rule 4 (statement -> vardecl .)
    DEFINE          reduce using rule 4 (statement -> vardecl .)
    WHILE           reduce using rule 4 (statement -> vardecl .)
    FOR             reduce using rule 4 (statement -> vardecl .)
    NAMESPACE       reduce using rule 4 (statement -> vardecl .)
    $end            reduce using rule 4 (statement -> vardecl .)
    RBRACE          reduce using rule 4 (statement -> vardecl .)


state 5

    (5) statement -> funcdecl .

    IF              reduce using rule 5 (statement -> funcdecl .)
    DEFINE          reduce using rule 5 (statement -> funcdecl .)
    WHILE           reduce using rule 5 (statement -> funcdecl .)
    FOR             reduce using rule 5 (statement -> funcdecl .)
    NAMESPACE       reduce using rule 5 (statement -> funcdecl .)
    $end            reduce using rule 5 (statement -> funcdecl .)
    RBRACE          reduce using rule 5 (statement -> funcdecl .)


state 6

    (6) statement -> whileloop .

    IF              reduce using rule 6 (statement -> whileloop .)
    DEFINE          reduce using rule 6 (statement -> whileloop .)
    WHILE           reduce using rule 6 (statement -> whileloop .)
    FOR             reduce using rule 6 (statement -> whileloop .)
    NAMESPACE       reduce using rule 6 (statement -> whileloop .)
    $end            reduce using rule 6 (statement -> whileloop .)
    RBRACE          reduce using rule 6 (statement -> whileloop .)


state 7

    (7) statement -> forloop .

    IF              reduce using rule 7 (statement -> forloop .)
    DEFINE          reduce using rule 7 (statement -> forloop .)
    WHILE           reduce using rule 7 (statement -> forloop .)
    FOR             reduce using rule 7 (statement -> forloop .)
    NAMESPACE       reduce using rule 7 (statement -> forloop .)
    $end            reduce using rule 7 (statement -> forloop .)
    RBRACE          reduce using rule 7 (statement -> forloop .)


state 8

    (27) if -> IF . condition LBRACE program RBRACE
    (28) if -> IF . condition LIKELY BOOL LBRACE program RBRACE
    (20) condition -> . condition comparator expression
    (21) condition -> . LPAREN condition RPAREN
    (22) condition -> . expression
    (23) condition -> . condition AND condition
    (24) condition -> . condition OR condition
    (25) condition -> . condition XOR condition
    (26) condition -> . NOT condition
    (83) expression -> . expression op expression
    (84) expression -> . expression op object
    (85) expression -> . object op object
    (86) expression -> . MINUS expression
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    MINUS           shift and go to state 24
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    condition                      shift and go to state 17
    expression                     shift and go to state 20
    object                         shift and go to state 23
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 9

    (64) vardecl -> namespace . type EQUALS object
    (60) type -> . TYPE
    (63) type -> . TYPE LBRACKET structure RBRACKET

    TYPE            shift and go to state 45

    type                           shift and go to state 44

state 10

    (67) funcdecl -> DEFINE . namespace LPAREN argtypes RPAREN type LBRACE program RBRACE
    (52) namespace -> . NAMESPACE

    NAMESPACE       shift and go to state 13

    namespace                      shift and go to state 46

state 11

    (68) whileloop -> WHILE . condition LBRACE program RBRACE
    (20) condition -> . condition comparator expression
    (21) condition -> . LPAREN condition RPAREN
    (22) condition -> . expression
    (23) condition -> . condition AND condition
    (24) condition -> . condition OR condition
    (25) condition -> . condition XOR condition
    (26) condition -> . NOT condition
    (83) expression -> . expression op expression
    (84) expression -> . expression op object
    (85) expression -> . object op object
    (86) expression -> . MINUS expression
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    MINUS           shift and go to state 24
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    condition                      shift and go to state 47
    expression                     shift and go to state 20
    object                         shift and go to state 23
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 12

    (69) forloop -> FOR . namespace IN object LBRACE program RBRACE
    (52) namespace -> . NAMESPACE

    NAMESPACE       shift and go to state 13

    namespace                      shift and go to state 48

state 13

    (52) namespace -> NAMESPACE .

    TYPE            reduce using rule 52 (namespace -> NAMESPACE .)
    LPAREN          reduce using rule 52 (namespace -> NAMESPACE .)
    TIMES           reduce using rule 52 (namespace -> NAMESPACE .)
    DIVIDE          reduce using rule 52 (namespace -> NAMESPACE .)
    PLUS            reduce using rule 52 (namespace -> NAMESPACE .)
    MINUS           reduce using rule 52 (namespace -> NAMESPACE .)
    MOD             reduce using rule 52 (namespace -> NAMESPACE .)
    POWER           reduce using rule 52 (namespace -> NAMESPACE .)
    IN              reduce using rule 52 (namespace -> NAMESPACE .)
    COLON           reduce using rule 52 (namespace -> NAMESPACE .)
    RPAREN          reduce using rule 52 (namespace -> NAMESPACE .)
    SEPARATOR       reduce using rule 52 (namespace -> NAMESPACE .)
    RBRACKET        reduce using rule 52 (namespace -> NAMESPACE .)
    LBRACE          reduce using rule 52 (namespace -> NAMESPACE .)
    LIKELY          reduce using rule 52 (namespace -> NAMESPACE .)
    AND             reduce using rule 52 (namespace -> NAMESPACE .)
    OR              reduce using rule 52 (namespace -> NAMESPACE .)
    XOR             reduce using rule 52 (namespace -> NAMESPACE .)
    GT              reduce using rule 52 (namespace -> NAMESPACE .)
    GE              reduce using rule 52 (namespace -> NAMESPACE .)
    LT              reduce using rule 52 (namespace -> NAMESPACE .)
    LE              reduce using rule 52 (namespace -> NAMESPACE .)
    NE              reduce using rule 52 (namespace -> NAMESPACE .)
    EQ              reduce using rule 52 (namespace -> NAMESPACE .)
    IF              reduce using rule 52 (namespace -> NAMESPACE .)
    DEFINE          reduce using rule 52 (namespace -> NAMESPACE .)
    WHILE           reduce using rule 52 (namespace -> NAMESPACE .)
    FOR             reduce using rule 52 (namespace -> NAMESPACE .)
    NAMESPACE       reduce using rule 52 (namespace -> NAMESPACE .)
    $end            reduce using rule 52 (namespace -> NAMESPACE .)
    RBRACE          reduce using rule 52 (namespace -> NAMESPACE .)


state 14

    (1) program -> program statement .

    IF              reduce using rule 1 (program -> program statement .)
    DEFINE          reduce using rule 1 (program -> program statement .)
    WHILE           reduce using rule 1 (program -> program statement .)
    FOR             reduce using rule 1 (program -> program statement .)
    NAMESPACE       reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)
    RBRACE          reduce using rule 1 (program -> program statement .)


state 15

    (29) if -> if ELIF . condition LBRACE program RBRACE
    (30) if -> if ELIF . condition LIKELY BOOL LBRACE program RBRACE
    (20) condition -> . condition comparator expression
    (21) condition -> . LPAREN condition RPAREN
    (22) condition -> . expression
    (23) condition -> . condition AND condition
    (24) condition -> . condition OR condition
    (25) condition -> . condition XOR condition
    (26) condition -> . NOT condition
    (83) expression -> . expression op expression
    (84) expression -> . expression op object
    (85) expression -> . object op object
    (86) expression -> . MINUS expression
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    MINUS           shift and go to state 24
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    condition                      shift and go to state 49
    expression                     shift and go to state 20
    object                         shift and go to state 23
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 16

    (31) if -> if ELSE . LBRACE program RBRACE

    LBRACE          shift and go to state 50


state 17

    (27) if -> IF condition . LBRACE program RBRACE
    (28) if -> IF condition . LIKELY BOOL LBRACE program RBRACE
    (20) condition -> condition . comparator expression
    (23) condition -> condition . AND condition
    (24) condition -> condition . OR condition
    (25) condition -> condition . XOR condition
    (14) comparator -> . gt
    (15) comparator -> . ge
    (16) comparator -> . lt
    (17) comparator -> . le
    (18) comparator -> . ne
    (19) comparator -> . eq
    (8) gt -> . GT
    (9) ge -> . GE
    (10) lt -> . LT
    (11) le -> . LE
    (12) ne -> . NE
    (13) eq -> . EQ

    LBRACE          shift and go to state 51
    LIKELY          shift and go to state 52
    AND             shift and go to state 54
    OR              shift and go to state 55
    XOR             shift and go to state 56
    GT              shift and go to state 63
    GE              shift and go to state 64
    LT              shift and go to state 65
    LE              shift and go to state 66
    NE              shift and go to state 67
    EQ              shift and go to state 68

    comparator                     shift and go to state 53
    gt                             shift and go to state 57
    ge                             shift and go to state 58
    lt                             shift and go to state 59
    le                             shift and go to state 60
    ne                             shift and go to state 61
    eq                             shift and go to state 62

state 18

    (37) dict -> LBRACE . items RBRACE
    (33) items -> . items SEPARATOR item
    (34) items -> . item
    (32) item -> . object COLON object
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    LPAREN          shift and go to state 72
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    items                          shift and go to state 69
    item                           shift and go to state 70
    object                         shift and go to state 71
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 19

    (58) bool -> BOOL .

    LPAREN          reduce using rule 58 (bool -> BOOL .)
    TIMES           reduce using rule 58 (bool -> BOOL .)
    DIVIDE          reduce using rule 58 (bool -> BOOL .)
    PLUS            reduce using rule 58 (bool -> BOOL .)
    MINUS           reduce using rule 58 (bool -> BOOL .)
    MOD             reduce using rule 58 (bool -> BOOL .)
    POWER           reduce using rule 58 (bool -> BOOL .)
    COLON           reduce using rule 58 (bool -> BOOL .)
    RPAREN          reduce using rule 58 (bool -> BOOL .)
    SEPARATOR       reduce using rule 58 (bool -> BOOL .)
    RBRACKET        reduce using rule 58 (bool -> BOOL .)
    LBRACE          reduce using rule 58 (bool -> BOOL .)
    LIKELY          reduce using rule 58 (bool -> BOOL .)
    AND             reduce using rule 58 (bool -> BOOL .)
    OR              reduce using rule 58 (bool -> BOOL .)
    XOR             reduce using rule 58 (bool -> BOOL .)
    GT              reduce using rule 58 (bool -> BOOL .)
    GE              reduce using rule 58 (bool -> BOOL .)
    LT              reduce using rule 58 (bool -> BOOL .)
    LE              reduce using rule 58 (bool -> BOOL .)
    NE              reduce using rule 58 (bool -> BOOL .)
    EQ              reduce using rule 58 (bool -> BOOL .)
    IF              reduce using rule 58 (bool -> BOOL .)
    DEFINE          reduce using rule 58 (bool -> BOOL .)
    WHILE           reduce using rule 58 (bool -> BOOL .)
    FOR             reduce using rule 58 (bool -> BOOL .)
    NAMESPACE       reduce using rule 58 (bool -> BOOL .)
    $end            reduce using rule 58 (bool -> BOOL .)
    RBRACE          reduce using rule 58 (bool -> BOOL .)
    TYPE            reduce using rule 58 (bool -> BOOL .)


state 20

    (22) condition -> expression .
    (83) expression -> expression . op expression
    (84) expression -> expression . op object
    (77) op -> . times
    (78) op -> . divide
    (79) op -> . plus
    (80) op -> . minus
    (81) op -> . mod
    (82) op -> . power
    (71) times -> . TIMES
    (72) divide -> . DIVIDE
    (73) plus -> . PLUS
    (74) minus -> . MINUS
    (75) mod -> . MOD
    (76) power -> . POWER

    LBRACE          reduce using rule 22 (condition -> expression .)
    LIKELY          reduce using rule 22 (condition -> expression .)
    AND             reduce using rule 22 (condition -> expression .)
    OR              reduce using rule 22 (condition -> expression .)
    XOR             reduce using rule 22 (condition -> expression .)
    GT              reduce using rule 22 (condition -> expression .)
    GE              reduce using rule 22 (condition -> expression .)
    LT              reduce using rule 22 (condition -> expression .)
    LE              reduce using rule 22 (condition -> expression .)
    NE              reduce using rule 22 (condition -> expression .)
    EQ              reduce using rule 22 (condition -> expression .)
    RPAREN          reduce using rule 22 (condition -> expression .)
    TIMES           shift and go to state 80
    DIVIDE          shift and go to state 81
    PLUS            shift and go to state 82
    MINUS           shift and go to state 83
    MOD             shift and go to state 84
    POWER           shift and go to state 85

    op                             shift and go to state 73
    times                          shift and go to state 74
    divide                         shift and go to state 75
    plus                           shift and go to state 76
    minus                          shift and go to state 77
    mod                            shift and go to state 78
    power                          shift and go to state 79

state 21

    (21) condition -> LPAREN . condition RPAREN
    (39) tuple -> LPAREN . elements RPAREN
    (20) condition -> . condition comparator expression
    (21) condition -> . LPAREN condition RPAREN
    (22) condition -> . expression
    (23) condition -> . condition AND condition
    (24) condition -> . condition OR condition
    (25) condition -> . condition XOR condition
    (26) condition -> . NOT condition
    (35) elements -> . elements SEPARATOR object
    (36) elements -> . object
    (83) expression -> . expression op expression
    (84) expression -> . expression op object
    (85) expression -> . object op object
    (86) expression -> . MINUS expression
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    MINUS           shift and go to state 24
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    condition                      shift and go to state 86
    elements                       shift and go to state 87
    expression                     shift and go to state 20
    object                         shift and go to state 88
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 22

    (26) condition -> NOT . condition
    (20) condition -> . condition comparator expression
    (21) condition -> . LPAREN condition RPAREN
    (22) condition -> . expression
    (23) condition -> . condition AND condition
    (24) condition -> . condition OR condition
    (25) condition -> . condition XOR condition
    (26) condition -> . NOT condition
    (83) expression -> . expression op expression
    (84) expression -> . expression op object
    (85) expression -> . object op object
    (86) expression -> . MINUS expression
    (40) object -> . dict
    (41) object -> . list
    (42) object -> . tuple
    (43) object -> . int
    (44) object -> . float
    (45) object -> . double
    (46) object -> . string
    (47) object -> . char
    (48) object -> . bool
    (49) object -> . null
    (50) object -> . namespace
    (51) object -> . funccall
    (37) dict -> . LBRACE items RBRACE
    (38) list -> . LBRACKET elements RBRACKET
    (39) tuple -> . LPAREN elements RPAREN
    (53) int -> . INT
    (54) float -> . FLOAT
    (55) double -> . DOUBLE
    (56) string -> . STRING
    (57) char -> . CHAR
    (58) bool -> . BOOL
    (59) null -> . NULL
    (52) namespace -> . NAMESPACE
    (70) funccall -> . object LPAREN elements RPAREN

    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    MINUS           shift and go to state 24
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    CHAR            shift and go to state 42
    BOOL            shift and go to state 19
    NULL            shift and go to state 43
    NAMESPACE       shift and go to state 13

    condition                      shift and go to state 89
    expression                     shift and go to state 20
    object                         shift and go to state 23
    dict                           shift and go to state 25
    list                           shift and go to state 26
    tuple                          shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    double                         shift and go to state 30
    string                         shift and go to state 31
    char                           shift and go to state 32
    bool                           shift and go to state 33
    null                           shift and go to state 34
    namespace                      shift and go to state 35
    funccall                       shift and go to state 36

state 23

    (85) expression -> object . op object
    (70) funccall -> object . LPAREN elements RPAREN
    (77) op -> . times
    (78) op -> . divide
    (79) op -> . plus
    (80) op -> . minus
    (81) op -> . mod
    (82) op -> . power
    (71) times -> . TIMES
    (72) divide -> . DIVIDE
    (73) plus -> . PLUS
    (74) minus -> . MINUS
    (75) mod -> . MOD
    (76) power -> . POWER

    LPAREN          shift and go to state 91
    TIMES           shift and go to state 80
    DIVIDE          shift and go to state 81
    PLUS            shift and go to state 82
    MINUS           shift and go to state 83
    MOD             shift and go to state 84
    POWER           shift and go to state 85

    op                             shift and go to state 90
    times                          shift and go to state 74
    divide                         shift and go to state 75
    plus                           shift and go to state 76
    minus                          shift and go to state 77
    mod                            shift and go to state 78
    power                          shift and go to state 79

state 24
